--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h1 {
     margin-bottom: 0;
     text-transform: uppercase;
   }
-h3 {
+h3, li {
   font-family: 'Roboto', sans-serif;
 }
   img {
@@ -21,4 +21,22 @@ h3 {
 #img-caption {
   font-family: 'Martel', serif;
   font-weight: bold;
+}
+@media (max-width: 460px) {
+  #img-caption {
+    font-size: 1.4rem;
+  }
+}
+ul {
+  max-width: 800px;
+  margin: 0 auto 50px auto;
+  text-align: left;
+  line-height: 3.0;
+}
+blockquote {
+  font-family: 'Russo One', sans-serif;
+  font-style: italic;
+  max-width: 745px;
+  margin: 0 auto 50px auto;
+  text-align: left;
 }
